Compiler/grammar.txt
expr	:	KEYWORD:var IDENTIFIER EQ expr
		:	comp ((KEYWORD:AND|KEYWORD:OR) comp)*

comp	:	NOT comp
		:	arithm ((EE|LT|GT|LTE|GTE) arithm)*	

arithm	:	term ((PLUS|MINUS) term)*

term	:	factor ((MUL|DIV) factor)*

factor	:	(PLUS|MINUS) factor
		:	power

power	:	atom (POW factor)*

atom	:	INT|FLOAT|IDENTIFIER
		:	LPAREN expr RPAREN
